--- a/css/barSet.css
+++ b/css/barSet.css
@@ -1,3 +1,350 @@
-.barSelectBox{
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.barSelectBox {
+    margin: 40px 0;
+    width: 100vw;
+    height: 114.93vw;
+    background: url("../images/plane_bg@3x.png");
+    background-size: 100% 100%;
+    position: relative;
+}
+.timeBox{
+    height: 40px;
+    line-height: 40px;
     width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    overflow-y: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.timeUnit{
+    display: inline-block;
+    width: 100px;
+    padding: 0 15px;
+    height: 100%;
+    border-bottom: 1px solid #fff;
+}
+
+.submitSet{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background: #ff6d26;
+    color: #fff;
+    font-size: 16px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+.pickedTime{
+    color: #fff;
+    text-align: center;
+    background:  #ff6d26;
+}
+.barUnit {
+
+}
+
+.barUnit img {
+    width: 100%;
+    height: 100%;
+}
+.tipsbox{
+    padding: 10px 10px;
+    white-space: nowrap;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 5px;
+}
+.bar1 {
+    width: calc(167 / 1125 * 100vw);
+    height: calc(165 / 1125 * 100vw);
+    position: absolute;
+    left: 63vw;
+    top: 37vw;
+}
+
+.bar2 {
+    width: calc(167 / 1125 * 100vw);
+    height: calc(165 / 1125 * 100vw);
+    position: absolute;
+    left: 73vw;
+    top: 47vw;
+}
+
+.bar3 {
+    width: calc(167 / 1125 * 100vw);
+    height: calc(165 / 1125 * 100vw);
+    position: absolute;
+    left: 82vw;
+    top: 56vw;
+}
+
+.bar5 {
+    width: calc(99 / 1125 * 100vw);
+    height: calc(149 / 1125 * 100vw);
+    position: absolute;
+    left: 87vw;
+    top: 68vw;
+}
+
+.bar6 {
+    width: calc(149 / 1125 * 100vw);
+    height: calc(99 / 1125 * 100vw);
+    position: absolute;
+    left: 67vw;
+    top: 65vw;
+}
+
+.bar7 {
+    width: calc(149 / 1125 * 100vw);
+    height: calc(99 / 1125 * 100vw);
+    position: absolute;
+    left: 67vw;
+    top: 77vw;
+}
+
+.bar8 {
+    width: calc(210 / 1125 * 100vw);
+    height: calc(165 / 1125 * 100vw);
+    position: absolute;
+    left: 56vw;
+    top: 92vw;
+}
+
+.bar9 {
+    width: calc(147 / 1125 * 100vw);
+    height: calc(51 / 1125 * 100vw);
+    position: absolute;
+    left: 66vw;
+    top: 87vw;
+}
+
+.bar10 {
+    width: calc(147 / 1125 * 100vw);
+    height: calc(51 / 1125 * 100vw);
+    position: absolute;
+    left: 49vw;
+    top: 87vw;
+}
+
+.bar11 {
+    width: calc(99 / 1125 * 100vw);
+    height: calc(149 / 1125 * 100vw);
+    position: absolute;
+    left: 55vw;
+    top: 72vw;
+}
+
+.bar12 {
+    width: calc(99 / 1125 * 100vw);
+    height: calc(149 / 1125 * 100vw);
+    position: absolute;
+    left: 44vw;
+    top: 72vw;
+}
+
+.bar13 {
+    width: calc(99 / 1125 * 100vw);
+    height: calc(149 / 1125 * 100vw);
+    position: absolute;
+    left: 32vw;
+    top: 64vw;
+}
+
+.bar15 {
+    width: calc(99 / 1125 * 100vw);
+    height: calc(149 / 1125 * 100vw);
+    position: absolute;
+    left: 28vw;
+    top: 50vw;
+}
+
+
+.bar16 {
+    width: calc(156 / 1125 * 100vw);
+    height: calc(173 / 1125 * 100vw);
+    position: absolute;
+    left: 12vw;
+    top: 46vw;
+}
+
+
+.bar17 {
+    width: calc(135 / 1125 * 100vw);
+    height: calc(135 / 1125 * 100vw);
+    position: absolute;
+    left: 26vw;
+    top: 37vw;
+}
+.bar18{
+    width: calc(156 / 1125 * 100vw);
+    height: calc(173 / 1125 * 100vw);
+    position: absolute;
+    left: 25vw;
+    top: 15vw;
+}
+.bar19 {
+    width: calc(147 / 1125 * 100vw);
+    height: calc(51 / 1125 * 100vw);
+    position: absolute;
+    left: 51vw;
+    top: 37vw;
+}
+.bar20 {
+    width: calc(198 / 1125 * 100vw);
+    height: calc(150 / 1125 * 100vw);
+    position: absolute;
+    left: 43vw;
+    top: 52vw;
+}
+.bar21 {
+    width: calc(135 / 1125 * 100vw);
+    height: calc(135 / 1125 * 100vw);
+    position: absolute;
+    left: 63vw;
+    top: 52vw;
+}
+
+.submitBox{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+}
+.submitBox_center{
+    width: 140px;
+    height: 80px;
+    position: absolute;
+    background: #fff;
+    border-radius: 5px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+/*loading效果*/
+.spinner {
+    margin: 15px auto;
+    width: 20px;
+    height: 20px;
+    position: relative;
+}
+.spinner_text{
+    font-size: 14px;
+    text-align: center;
+}
+.container1 > div, .container2 > div, .container3 > div {
+    width: 6px;
+    height: 6px;
+    background-color: #111;
+    border-radius: 100%;
+    position: absolute;
+    -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
+    animation: bouncedelay 1.2s infinite ease-in-out;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.spinner .spinner-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.container2 {
+    -webkit-transform: rotateZ(45deg);
+    transform: rotateZ(45deg);
+}
+
+.container3 {
+    -webkit-transform: rotateZ(90deg);
+    transform: rotateZ(90deg);
+}
+
+.circle1 { top: 0; left: 0; }
+.circle2 { top: 0; right: 0; }
+.circle3 { right: 0; bottom: 0; }
+.circle4 { left: 0; bottom: 0; }
+
+.container2 .circle1 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.container3 .circle1 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+.container1 .circle2 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.container2 .circle2 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
+.container3 .circle2 {
+    -webkit-animation-delay: -0.7s;
+    animation-delay: -0.7s;
+}
+
+.container1 .circle3 {
+    -webkit-animation-delay: -0.6s;
+    animation-delay: -0.6s;
+}
+
+.container2 .circle3 {
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+}
+
+.container3 .circle3 {
+    -webkit-animation-delay: -0.4s;
+    animation-delay: -0.4s;
+}
+
+.container1 .circle4 {
+    -webkit-animation-delay: -0.3s;
+    animation-delay: -0.3s;
+}
+
+.container2 .circle4 {
+    -webkit-animation-delay: -0.2s;
+    animation-delay: -0.2s;
+}
+
+.container3 .circle4 {
+    -webkit-animation-delay: -0.1s;
+    animation-delay: -0.1s;
+}
+
+@-webkit-keyframes bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0.0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bouncedelay {
+    0%, 80%, 100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    } 40% {
+          transform: scale(1.0);
+          -webkit-transform: scale(1.0);
+      }
 }
