--- a/css/barSet.css
+++ b/css/barSet.css
@@ -57,6 +57,7 @@ body {
     height: 100%;
 }
 .tipsbox{
+    font-size: 12px;
     padding: 10px 10px;
     white-space: nowrap;
     position: fixed;
