--- a/css/barSet.css
+++ b/css/barSet.css
@@ -12,6 +12,7 @@ body {
     position: relative;
 }
 .timeBox{
+    background: #fff;
     height: 40px;
     line-height: 40px;
     width: 100%;
@@ -21,6 +22,7 @@ body {
     overflow-y: hidden;
     overflow-x: auto;
     white-space: nowrap;
+    border-bottom: 1px solid #ccc;
 }
 
 .timeUnit{
