--- a/css/common.css
+++ b/css/common.css
@@ -41,7 +41,43 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
-
+.modelBg{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+}
+.modelBox{
+    border-radius: 5px;
+    width: 80%;
+    background: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.modelTitle{
+    padding: 12px;
+    text-align: center;
+}
+.modelBtnBox{
+    height: 40px;
+    line-height: 40px;
+    border-top: 1px solid #ccc;
+    display: flex;
+}
+.cancelBtn{
+    flex: 1;
+    text-align: center;
+    border-right: 1px solid #ccc;
+}
+.sureBtn{
+    flex: 1;
+    text-align: center;
+    color: #ff6d26;
+}
 /*loading效果*/
 .spinner {
     margin: 15px auto;
