--- a/css/enditMySet.css
+++ b/css/enditMySet.css
@@ -53,3 +53,8 @@ body {
     margin: 0;
     padding: 0;
 }
+input:disabled{
+    border:1px solid #fff;
+    background-color:#fff;
+    color:#666;
+}
